# RaianBot-Entari

./: .entari_cli.toml  .env.template  .gitignore  README.md  entari.schema.json  entari.yml  pyproject.toml
config/: coc.schema.json  coc.yml  copper.schema.json  copper.yml  dialog.schema.json  dialog.yml  draw.schema.json  draw.yml  greet.schema.json  greet.yml  guess_operator.schema.json  guess_operator.yml  help.schema.json  help.yml  ill.schema.json  ill.yml  marry.schema.json  marry.yml  music.schema.json  music.yml  petpet.schema.json  petpet.yml  random_operator.schema.json  random_operator.yml  sign.schema.json  sign.yml  sk_autosign.schema.json  sk_autosign.yml  status.schema.json  status.yml  weather.schema.json  weather.yml  weibo.schema.json  weibo.yml
core/: __init__.py  channel.py  config.py  debug.py  event.py  exception.py  member.py  request.py
plugins/coc/: __init__.py  model.py
plugins/copper/: __init__.py
plugins/dialog/: __init__.py
plugins/draw/: __init__.py  model.py
plugins/greet/: __init__.py
plugins/guess_operator/: __init__.py
plugins/help/: __init__.py
plugins/ill/: __init__.py
plugins/marry/: __init__.py
plugins/music/: __init__.py  config.py
plugins/petpet/: __init__.py  generate.py
plugins/random_operator/: __init__.py
plugins/sign/: __init__.py  config.py  model.py
plugins/sk_autosign/: __init__.py  model.py  utils.py
plugins/status/: __init__.py  config.py  data.py
plugins/weather/: __init__.py
plugins/weibo/: __init__.py  config.py  main.py  model.py
tools/cos/: config.py  request.py
tools/dice/: cards.py  deck.py  investigator.py  (+1 more)
(+16 files in other folders)
