[project]
name = "entari-workspace"
version = "0.0.0"
description = ""
dependencies = [
    "arclet-entari[cron,dotenv,reload,yaml]>=0.18.0",
    "entari-plugin-arkgacha>=0.5.2",
    "entari-plugin-user>=0.1.5",
    "entari-plugin-browser[jinja]>=0.6.1",
    "entari-plugin-server>=0.7.1",
    "entari-plugin-database>=0.3.3",
    "satori-python-core>=1.3.6",
    "satori-python-adapter-qq>=0.4.0rc13",
    "satori-python-adapter-milky>=0.4.0",
    "satori-python-adapter-onebot11>=0.4.4",
    "arknights-toolkit>=0.8",
    "psutil>=7.2.2",
    "humanize>=4.15.0",
    "diro-py>=0.1.1",
    "entari-plugin-llm>=0.2.0",
    "PyJWT>=2.13.0",
]
authors = [
    {"name" = "RF-Tar-Railt", "email" = "rf_tar_railt@qq.com"}
]
requires-python = ">= 3.10"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["core/**/*.py", "tools/**/*.py", "plugins/**/*.py"]
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "T201"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]
force-sort-within-sections = false

[tool.pdm]
distribution = false

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
]
